# Oracle

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: event_handler.rs  logger.rs  main.rs
src/database/: connection.rs  mod.rs  model.rs  queries.rs
src/database/migrations/: 20240702023232_users.down.sql  20240702023232_users.up.sql  20240703182358_guilds.down.sql  20240703182358_guilds.up.sql  20240703222353_channel_and_messages.down.sql  20240703222353_channel_and_messages.up.sql  20240703224800_roles.down.sql  20240703224800_roles.up.sql  20240704031415_v1.down.sql  20240704031415_v1.up.sql
