[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"


dotenv = "0.15.0"

[dependencies.serenity]
version = "0.12.2"
default-features = false
features = [
    "builder",
    "cache",
    "chrono", 
    "client",
    "gateway",
    "model", 
    "http",
    "utils",
    "rustls_backend"
]